samples/_failures_safe/1761298624_1dd183_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e0bbcf2.c: In function ‘calculate_stats’:
./samples/SAFE/__tmp_6e0bbcf2.c:141:13: error: expected expression at end of input
  141 |             stats->most_frequent_level[MAX_LEVEL_LENGTH -
      |             ^~~~~
./samples/SAFE/__tmp_6e0bbcf2.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e0bbcf2.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e0bbcf2.c:141:13: error: expected declaration or statement at end of input
